--- a/netbox_automation_plugin/templates/netbox_automation_plugin/vlan_deployment_results.html
+++ b/netbox_automation_plugin/templates/netbox_automation_plugin/vlan_deployment_results.html
@@ -92,6 +92,30 @@
   .table th {
     color: var(--nbx-color-fg-default, #212529) !important;
   }
+  
+  /* Ensure all text in results is visible */
+  body,
+  .card-body,
+  .card-header,
+  label,
+  p,
+  div,
+  span,
+  h1, h2, h3, h4, h5, h6,
+  .card-title,
+  .h1, .h2, .h3, .h4, .h5, .h6,
+  dt,
+  dd {
+    color: var(--nbx-color-fg-default, #212529) !important;
+  }
+  
+  /* Help text should still be visible but can be slightly muted */
+  .form-text,
+  .text-muted,
+  small {
+    color: var(--nbx-color-fg-default, #212529) !important;
+    opacity: 0.9;
+  }
 </style>
   <div class="row mb-3">
     <div class="col-md-12">
